# libopencm3

./: .cproject  .flake8  .gitattributes  .gitignore  .project  .travis.yml  Doxyfile  DoxygenLayout.xml  HACKING  HACKING_COMMON_DOC  Kconfig  Makefile  README  README.md  doo  locm3.sublime-project  meson.build  meson_options.txt  package.json
include/: libopenstm32.h  meson.build  usbd.h  usbstd.h
include/cm3/: common.h  memorymap.h
include/libopencm3/: docmain.dox  license.dox
include/libopencm3/can/: can_bit_timing.h
include/libopencm3/cm3/: assert.h  common.h  cortex.h  doc-cm3.h  docmain.h  dwt.h  fpb.h  itm.h  memorymap.h  mpu.h  nvic.h  scb.h  scs.h  sync.h  systick.h  tpiu.h  vector.h
include/libopencm3/dispatch/: nvic.h
include/libopencm3/efm32/: acmp.h  adc.h  burtc.h  cmu.h  dac.h  dma.h  emu.h  gpio.h  i2c.h  letimer.h  memorymap.h  msc.h  opamp.h  prs.h  rmu.h  rtc.h  timer.h  uart.h  usart.h  usb.h  vector.h  wdog.h
include/libopencm3/ethernet/: mac.h  mac_stm32fxx7.h  phy.h  phy_ksz8051mll.h  phy_ksz80x1.h  phy_lan87xx.h  phy_ste100.h
include/libopencm3/gd32/: dma.h  flash.h  gpio.h  memorymap.h  rcc.h  spi.h  timer.h  usart.h
include/libopencm3/gd32v/: eclic.h  systick.h  vector.h
include/libopencm3/lm3s/: doc-lm3s.h  gpio.h  irq.h  irq.json  irq.yaml  memorymap.h  meson.build  rcc.h  systemcontrol.h  usart.h
include/libopencm3/lm4f/: doc-lm4f.h  gpio.h  memorymap.h  nvic.h  rcc.h  ssi.h  systemcontrol.h  timer.h  uart.h  usb.h
include/libopencm3/lpc13xx/: doc-lpc13xx.h  gpio.h  irq.json  irq.yaml  memorymap.h
include/libopencm3/lpc17xx/: clock.h  doc-lpc17xx.h  exti.h  gpio.h  irq.h  irq.json  irq.yaml  memorymap.h  pinconn.h  pwr.h  uart.h
include/libopencm3/lpc43xx/: adc.h  atimer.h  ccu.h  cgu.h  creg.h  doc-lpc43xx.h  eventrouter.h  gima.h  gpdma.h  gpio.h  i2c.h  i2s.h  ipc.h  irq.h  irq.yaml  memorymap.h  nvic.h  rgu.h  ritimer.h  scu.h  sdio.h  sgpio.h  ssp.h  systick.h  timer.h  uart.h  usb.h  wwdt.h
include/libopencm3/nrf/: clock.h  ficr.h  gpio.h  i2c.h  memorymap.h  ostick.h  periph.h  power.h  ppi.h  radio.h  rtc.h  timer.h  uart.h  uicr.h
include/libopencm3/nrf5/: clock.h  gpio.h  memorymap.h  power.h  ppi.h  pwm.h  radio.h  rng.h  saadc.h  spim.h  temp.h  timer.h  uart.h  uarte.h
include/libopencm3/pac55xx/: can.h  ccs.h  doc-pac55xx.h  gpio.h  irq.json  memctl.h  memorymap.h  usart.h
include/libopencm3/py32/: gpio.h  memorymap.h  rcc.h  usart.h
include/libopencm3/sam/: adcife.h  eefc.h  gpio.h  memorymap.h  pdc.h  periph.h  pio.h  pm.h  pmc.h  pwm.h  rstc.h  scif.h  smc.h  spi.h  tc.h  uart.h  udp.h  usart.h  usb.h  wdt.h
include/libopencm3/sam3x/: eefc.h  gpio.h  irq.yaml  memorymap.h  pio.h  pmc.h  pwm.h  tc.h  uart.h  usart.h  wdt.h
include/libopencm3/stm32/: adc.h  bkp.h  can.h  cec.h  comparator.h  cordic.h  crc.h  crs.h  cryp.h  crypto.h  dac.h  dbgmcu.h  dcmi.h  desig.h  dma.h  dma2d.h  dmamux.h  doc-stm32f.h  dsi.h  ethernet.h  exti.h  fdcan.h  flash.h  fsmc.h  gpio.h  hash.h  hrtim.h  i2c.h  icache.h  ipcc.h  iwdg.h  lptimer.h  ltdc.h  memorymap.h  nvic.h  octospi.h  opamp.h  otg_common.h  otg_fs.h  otg_hs.h  (+20 more)
include/libopencm3/stm32_common/: can.h  crc.h  dbgmcu.h  exti.h  fsmc.h  i2c.h  iwdg.h  memorymap.h  pwr.h  spi.h  timer.h  usart.h  wwdg.h
include/libopencm3/stm32f1/: can.h  crc.h  exti.h  flash.h  otg_fs.h  pwr.h  spi.h
include/libopencm3/stm32f2/: pwr.h  spi.h  usart.h
include/libopencm3/swm050/: clk.h  doc-swm050.h  flash.h  gpio.h  irq.json  memorymap.h  pwr.h  syscon.h  sysctl.h  timer.h  wdt.h
include/libopencm3/usb/: audio.h  bos.h  cdc.h  dfu.h  doc-usb.h  dwc_otg_common.h  hid.h  hid_usage_tables.h  microsoft.h  midi.h  msc.h  usbd.h  usbstd.h
include/libopencm3/usbd/: msc.h  usbd.h
include/libopencm3/usbh/: usbh.h
include/libopencm3/vf6xx/: anadig.h  ccm.h  doc-vf6xx.h  gpio.h  iomuxc.h  irq.json  memorymap.h  uart.h
include/libopencmsis/: core_cm3.h
include/libopencmsis/dispatch/: irqhandlers.h
include/libopencmsis/swm050/: irqhandlers.h
include/libopenstm32/: adc.h  bkp.h  can.h  common.h  crc.h  dma.h  ethernet.h  exti.h  flash.h  gpio.h  i2c.h  iwdg.h  memorymap.h  nvic.h  power.h  pwr.h  rcc.h  rtc.h  scb.h  spi.h  stdint.h  systick.h  timer.h  tools.h  usart.h  usb.h  usb_desc.h  wwdg.h
include/lpc13xx/: gpio.h  memorymap.h
include/stm32/: adc.h  bkp.h  can.h  crc.h  dma.h  ethernet.h  exti.h  flash.h  fsmc.h  gpio.h  i2c.h  iwdg.h  memorymap.h  nvic.h  pwr.h  rcc.h  rtc.h  scb.h  spi.h  systick.h  timer.h  tools.h  usart.h  usb.h  usb_desc.h  wwdg.h
include/usb/: cdc.h  dfu.h  hid.h  usbd.h  usbstd.h
lib/gd32/: common  meson.build
lib/gd32/common/: dma_common_f1.c  flash_common_all.c  gpio_common_all.c  gpio_common_f0234.c  rcc_common_all.c  spi_common_all.c  spi_common_v2.c  timer_common_all.c  usart_common_all.c  usart_common_v2.c
lib/gd32/f1x0/: Makefile  flash.c  meson.build  rcc.c
lib/gd32/f3/: Makefile  i2c.c
lib/gd32/f3_common/: adc.c  flash.c
lib/gd32/f3_nofpu/: Makefile  rcc.c  rtc.c
lib/stm32/: Makefile  adc.c  can.c  crc.c  dac.c  desig.c  dma.c  ethernet.c  exti.c  exti2.c  fdcan.c  flash.c  gpio.c  gpio2.c  i2c.c  iwdg.c  libopenstm32.ld  meson.build  nvic.c  rcc.c  rtc.c  scb.c  spi.c  st_usbfs_double.c  st_usbfs_v1.c  st_usbfs_v2.c  st_usbfs_v2_double.c  stm32.ld  systick.c  timer.c  usart.c  vector.c
lib/stm32/common/: adc_common_f47.c  adc_common_l4.c  adc_common_v1.c  adc_common_v1_multi.c  adc_common_v2.c  adc_common_v2_multi.c  adc_common_v3.c  can_common_all.c  can_common_bxcan.c  can_common_f124.c  cordic_common_v1.c  crc_common_all.c  crc_v2.c  (+89 more)
lib/usb/: meson.build  stm32_usbfs_common.c  stm32_usbfs_common.h  usb.c  usb_at32.c  usb_audio.c  usb_bos.c  usb_cdc.c  usb_control.c  usb_dfu.c  usb_dwc_common.c  usb_dwc_common.h  usb_efm32.c  usb_efm32hg.c  usb_efm32lg.c  usb_f0x2.c  usb_f103.c  usb_f107.c  usb_f207.c  usb_f723.c  usb_fx07_common.c  usb_fx07_common.h  usb_hid.c  usb_lm4f.c  usb_microsoft.c  usb_midi.c  usb_msc.c  usb_private.h  usb_sam.c  usb_sam_udp.c  usb_standard.c  usb_stm32h7.c  usb_stm32u5.c
(+2514 files in other folders)
